added search bar

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 VITE_BASE_URL = "https://api.themoviedb.org/3"
 VITE_API_KEY = "api_key=86b24d09f9325717c4b4c3faa40cb0f7"
+VITE_FILTRED_FILM = "https://api.themoviedb.org/3/search/movie?query=inception&api_key=86b24d09f9325717c4b4c3faa40cb0f7&language=it-IT&page=1"
